syntax="proto3";

package booking;

service BookingService {
    rpc GetList (BookingsList) returns (BookingsList) {};
    rpc Create (CreateBooking) returns (Booking) {};
}

message BookingsList {
    repeated Booking data = 1;
}

message Booking {
    int32 id = 1;
    int32 user = 2;
    int32 item = 3;
    string startDate = 4;
    string endDate = 5;
    float price = 6;
}

message CreateBooking {
    int32 user = 2;
    int32 item = 3;
    string startDate = 4;
    string endDate = 5;
    float price = 6;
}
